maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:3: error: not found: value keepHandOnSide
    keepHandOnSide()
    ^Escaper:9: error: not found: value keepHandOnSideWall
keepHandOnSideWall(){
^Escaper:11: error: type mismatch;
 found   : Int(0)
 required: Unit
    case 0 => avance()
         ^Escaper:12: error: type mismatch;
 found   : Int(1)
 required: Unit
    case 1 => gauche()
         ^Escaper:13: error: type mismatch;
 found   : Int(2)
 required: Unit
    case 2 => retourne()
         ^Escaper:14: error: type mismatch;
 found   : Int(3)
 required: Unit
    case 3 => droite()
         ^Escaper:27: error: not found: value estfaceMur
  var d = estfaceMur()
          ^Escaper:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (g){return 0}
                ^Escaper:29: warning: enclosing method situation has result type Unit: return value discarded
  if (g){return 0}
         ^Escaper:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (front && d && !g){return 1}
                               ^Escaper:30: warning: enclosing method situation has result type Unit: return value discarded
  if (front && d && !g){return 1}
                        ^Escaper:31: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (front && g && d){return 2}
                              ^Escaper:31: warning: enclosing method situation has result type Unit: return value discarded
  if (front && g && d){return 2}
                       ^Escaper:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  else {return 3}
               ^Escaper:32: warning: enclosing method situation has result type Unit: return value discarded
  else {return 3}
        ^